--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,24 @@
 @font-face {
   font-family: 'SFUIText-Bold';
-  src: url("../assest/fonts/SFUIText-Bold/SFUIText-Bold.eot?#iefix") format("embedded-opentype"), url("../assest/fonts/SFUIText-Bold/SFUIText-Bold.otf") format("opentype"), url("../assest/fonts/SFUIText-Bold/SFUIText-Bold.woff") format("woff"), url("../assest/fonts/SFUIText-Bold/SFUIText-Bold.ttf") format("truetype"), url("../assest/fonts/SFUIText-Bold/SFUIText-Bold.svg#SFUIText-Bold") format("svg");
+  src: url("../assets/fonts/SFUIText-Bold/SFUIText-Bold.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/SFUIText-Bold/SFUIText-Bold.otf") format("opentype"), url("../assets/fonts/SFUIText-Bold/SFUIText-Bold.woff") format("woff"), url("../assets/fonts/SFUIText-Bold/SFUIText-Bold.ttf") format("truetype"), url("../assets/fonts/SFUIText-Bold/SFUIText-Bold.svg#SFUIText-Bold") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'SFUIText-Regular';
-  src: url("../assest/fonts/SFUIText-Regular/SFUIText-Regular.eot?#iefix") format("embedded-opentype"), url("../assest/fonts/SFUIText-Regular/SFUIText-Regular.otf") format("opentype"), url("../assest/fonts/SFUIText-Regular/SFUIText-Regular.woff") format("woff"), url("../assest/fonts/SFUIText-Regular/SFUIText-Regular.ttf") format("truetype"), url("../assest/fonts/SFUIText-Regular/SFUIText-Regular.svg#SFUIText-Regular") format("svg");
+  src: url("../assets/fonts/SFUIText-Regular/SFUIText-Regular.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/SFUIText-Regular/SFUIText-Regular.otf") format("opentype"), url("../assets/fonts/SFUIText-Regular/SFUIText-Regular.woff") format("woff"), url("../assets/fonts/SFUIText-Regular/SFUIText-Regular.ttf") format("truetype"), url("../assets/fonts/SFUIText-Regular/SFUIText-Regular.svg#SFUIText-Regular") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'SFUIText-Light';
-  src: url("../assest/fonts/SFUIText-Light/SFUIText-Light.eot?#iefix") format("embedded-opentype"), url("../assest/fonts/SFUIText-Light/SFUIText-Light.otf") format("opentype"), url("../assest/fonts/SFUIText-Light/SFUIText-Light.woff") format("woff"), url("../assest/fonts/SFUIText-Light/SFUIText-Light.ttf") format("truetype"), url("../assest/fonts/SFUIText-Light/SFUIText-Light.svg#SFUIText-Light") format("svg");
+  src: url("../assets/fonts/SFUIText-Light/SFUIText-Light.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/SFUIText-Light/SFUIText-Light.otf") format("opentype"), url("../assets/fonts/SFUIText-Light/SFUIText-Light.woff") format("woff"), url("../assets/fonts/SFUIText-Light/SFUIText-Light.ttf") format("truetype"), url("../assets/fonts/SFUIText-Light/SFUIText-Light.svg#SFUIText-Light") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'SFUIText-Medium';
-  src: url("../assest/fonts/SFUIText-Medium/SFUIText-Medium.eot?#iefix") format("embedded-opentype"), url("../assest/fonts/SFUIText-Medium/SFUIText-Medium.otf") format("opentype"), url("../assest/fonts/SFUIText-Medium/SFUIText-Medium.woff") format("woff"), url("../assest/fonts/SFUIText-Medium/SFUIText-Medium.ttf") format("truetype"), url("../assest/fonts/SFUIText-Medium/SFUIText-Medium.svg#SFUIText-Medium") format("svg");
+  src: url("../assets/fonts/SFUIText-Medium/SFUIText-Medium.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/SFUIText-Medium/SFUIText-Medium.otf") format("opentype"), url("../assets/fonts/SFUIText-Medium/SFUIText-Medium.woff") format("woff"), url("../assets/fonts/SFUIText-Medium/SFUIText-Medium.ttf") format("truetype"), url("../assets/fonts/SFUIText-Medium/SFUIText-Medium.svg#SFUIText-Medium") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -26,7 +26,7 @@ body {
   position: relative;
   overflow-x: hidden;
   font-size: 16px;
-  background-image: url(../assest/images/bg_main.jpg);
+  background-image: url(../assets/images/bg_main.jpg);
   background-size: cover;
   background-position: center center;
   font-family: "SFUIText-Light"; }
@@ -129,7 +129,7 @@ h1 {
   .line_1::before {
     position: absolute;
     content: '';
-    background-image: url(../assest/images/thin_line_top.png);
+    background-image: url(../assets/images/thin_line_top.png);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: 100% auto;
@@ -178,7 +178,7 @@ h1 {
   .line_2::before {
     position: absolute;
     content: '';
-    background-image: url(../assest/images/thin_line_right.png);
+    background-image: url(../assets/images/thin_line_right.png);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: auto 100%;
@@ -227,7 +227,7 @@ h1 {
   .line_3::before {
     position: absolute;
     content: '';
-    background-image: url(../assest/images/thin_line_bottom.png);
+    background-image: url(../assets/images/thin_line_bottom.png);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: 100% auto;
@@ -276,7 +276,7 @@ h1 {
   .line_4::before {
     position: absolute;
     content: '';
-    background-image: url(../assest/images/thin_line_left.png);
+    background-image: url(../assets/images/thin_line_left.png);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: auto 100%;
@@ -336,7 +336,7 @@ h1 {
     width: 100%; }
 
 .nav-toggle {
-  background-image: url(../assest/images/menu_toggle.png);
+  background-image: url(../assets/images/menu_toggle.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -539,7 +539,7 @@ h1 {
     border-radius: 1.563vw;
     width: 2.865vw;
     height: 11.042vw;
-    background-image: url(../assest/images/btn_register.png);
+    background-image: url(../assets/images/btn_register.png);
     background-position: center bottom;
     background-size: auto 100%; }
     @media (max-width: 1199px) {
@@ -549,13 +549,13 @@ h1 {
         border: 1px solid #000;
         border-radius: 30px; } }
     .site-footer .btn_register:hover {
-      background-image: url(../assest/images/btn_register_hover.png); }
+      background-image: url(../assets/images/btn_register_hover.png); }
   .site-footer .btn_fb {
     border: 0.052vw solid #000;
     border-radius: 0.781vw;
     width: 2.969vw;
     height: 2.969vw;
-    background-image: url(../assest/images/btn_fb.png); }
+    background-image: url(../assets/images/btn_fb.png); }
     @media (max-width: 1199px) {
       .site-footer .btn_fb {
         width: 35px;
@@ -563,13 +563,13 @@ h1 {
         border: 1px solid #000;
         border-radius: 5px; } }
     .site-footer .btn_fb:hover {
-      background-image: url(../assest/images/btn_fb_hover.png); }
+      background-image: url(../assets/images/btn_fb_hover.png); }
   .site-footer .btn_download {
     border: 0.052vw solid #000;
     border-radius: 0.781vw;
     width: 2.969vw;
     height: 2.969vw;
-    background-image: url(../assest/images/btn_download.png); }
+    background-image: url(../assets/images/btn_download.png); }
     @media (max-width: 1199px) {
       .site-footer .btn_download {
         width: 35px;
@@ -577,7 +577,7 @@ h1 {
         border: 1px solid #000;
         border-radius: 5px; } }
     .site-footer .btn_download:hover {
-      background-image: url(../assest/images/btn_download_hover.png); }
+      background-image: url(../assets/images/btn_download_hover.png); }
   .site-footer .btn_toTop {
     border: none;
     height: 0;
@@ -586,7 +586,7 @@ h1 {
     -webkit-transition: all 0.3;
     -o-transition: all 0.3;
     transition: all 0.3;
-    background-image: url(../assest/images/btn_toTop.png); }
+    background-image: url(../assets/images/btn_toTop.png); }
     @media (max-width: 1199px) {
       .site-footer .btn_toTop {
         width: 35px;
@@ -594,7 +594,7 @@ h1 {
         border: 1px solid #000;
         border-radius: 5px; } }
     .site-footer .btn_toTop:hover {
-      background-image: url(../assest/images/btn_toTop_hover.png); }
+      background-image: url(../assets/images/btn_toTop_hover.png); }
     .site-footer .btn_toTop.active {
       border: 0.052vw solid #000;
       height: 2.969vw; }
@@ -605,7 +605,7 @@ h1 {
   @media (max-width: 767px) {
     .section {
       height: 100% !important;
-      background-image: url(../assest/images/bg_main.jpg) !important;
+      background-image: url(../assets/images/bg_main.jpg) !important;
       padding: 50px 0;
       background-size: cover;
       background-position: center center; } }
@@ -613,7 +613,7 @@ h1 {
     .section_01 {
       padding-top: 100px; } }
   .section_02 {
-    background-image: url(../assest/images/section02_bg.jpg);
+    background-image: url(../assets/images/section02_bg.jpg);
     background-size: cover;
     background-position: center center; }
     .section_02 .content {
@@ -680,7 +680,7 @@ h1 {
             height: 15px;
             top: 5px; } }
   .section_03 {
-    background-image: url(../assest/images/section03_bg.jpg);
+    background-image: url(../assets/images/section03_bg.jpg);
     background-size: cover;
     background-position: center center; }
     @media (max-width: 1199px) {
@@ -875,7 +875,7 @@ h1 {
         position: absolute;
         bottom: 0;
         left: 0;
-        background-image: url(../assest/images/section04_bg_text.png);
+        background-image: url(../assets/images/section04_bg_text.png);
         background-position: left center;
         background-size: 100%;
         color: #fff;
@@ -987,7 +987,7 @@ h1 {
           width: 12px;
           height: 12px; } }
   .section_05 {
-    background-image: url(../assest/images/section05_bg.jpg);
+    background-image: url(../assets/images/section05_bg.jpg);
     background-size: cover;
     background-position-x: left;
     background-position-y: bottom; }
@@ -1007,7 +1007,7 @@ h1 {
           max-width: 75%; } }
 
 .section_contact, .section_01, .section_06 {
-  background-image: url(../assest/images/section01_bg.jpg);
+  background-image: url(../assets/images/section01_bg.jpg);
   background-size: cover;
   background-position: center center; }
   @media (max-width: 1199px) {
@@ -1169,7 +1169,7 @@ h1 {
     position: absolute;
     bottom: 0;
     left: 0;
-    background-image: url(../assest/images/section04_bg_text.png);
+    background-image: url(../assets/images/section04_bg_text.png);
     background-position: left center;
     background-size: 100%;
     color: #fff;
