--- a/scss/_full.scss
+++ b/scss/_full.scss
@@ -2,7 +2,7 @@ body {
     position: relative;
     overflow-x: hidden;
     font-size: 16px;
-    background-image: url(../assest/images/bg_main.jpg);
+    background-image: url(../assets/images/bg_main.jpg);
     background-size: cover;
     background-position: center center;
     font-family: $fontLight;
@@ -117,7 +117,7 @@ h1{
         &::before{
             position: absolute;
             content: '';
-            background-image: url(../assest/images/thin_line_top.png);
+            background-image: url(../assets/images/thin_line_top.png);
             background-position: top center;
             background-repeat: no-repeat;
             background-size: 100% auto;
@@ -164,7 +164,7 @@ h1{
         &::before{
             position: absolute;
             content: '';
-            background-image: url(../assest/images/thin_line_right.png);
+            background-image: url(../assets/images/thin_line_right.png);
             background-position: top center;
             background-repeat: no-repeat;
             background-size: auto 100%;
@@ -211,7 +211,7 @@ h1{
         &::before{
             position: absolute;
             content: '';
-            background-image: url(../assest/images/thin_line_bottom.png);
+            background-image: url(../assets/images/thin_line_bottom.png);
             background-position: top center;
             background-repeat: no-repeat;
             background-size: 100% auto;
@@ -257,7 +257,7 @@ h1{
         &::before{
             position: absolute;
             content: '';
-            background-image: url(../assest/images/thin_line_left.png);
+            background-image: url(../assets/images/thin_line_left.png);
             background-position: top center;
             background-repeat: no-repeat;
             background-size: auto 100%;
@@ -323,7 +323,7 @@ h1{
 }
 
 .nav-toggle {
-    background-image: url(../assest/images/menu_toggle.png);
+    background-image: url(../assets/images/menu_toggle.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -563,7 +563,7 @@ h1{
         border-radius: 1.563vw;
         width: 2.865vw;
         height: 11.042vw;
-        background-image: url(../assest/images/btn_register.png);
+        background-image: url(../assets/images/btn_register.png);
         background-position: center bottom;
         
         background-size: auto 100%;
@@ -574,7 +574,7 @@ h1{
             border-radius: 30px;
         }
         &:hover{
-            background-image: url(../assest/images/btn_register_hover.png);
+            background-image: url(../assets/images/btn_register_hover.png);
         }
     }
     .btn_fb{
@@ -586,7 +586,7 @@ h1{
         border-radius: 0.781vw;
         width: 2.969vw;
         height: 2.969vw;
-        background-image: url(../assest/images/btn_fb.png);
+        background-image: url(../assets/images/btn_fb.png);
         
         @media(max-width:1199px){
             width: 35px;
@@ -595,7 +595,7 @@ h1{
             border-radius: 5px;
         }
         &:hover{
-            background-image: url(../assest/images/btn_fb_hover.png);
+            background-image: url(../assets/images/btn_fb_hover.png);
         }
     }
     .btn_download{
@@ -607,7 +607,7 @@ h1{
         border-radius: 0.781vw;
         width: 2.969vw;
         height: 2.969vw;
-        background-image: url(../assest/images/btn_download.png);
+        background-image: url(../assets/images/btn_download.png);
         @media(max-width:1199px){
             width: 35px;
             height: 35px;
@@ -615,7 +615,7 @@ h1{
             border-radius: 5px;
         }
         &:hover{
-            background-image: url(../assest/images/btn_download_hover.png);
+            background-image: url(../assets/images/btn_download_hover.png);
         }
     }
     .btn_toTop{
@@ -628,7 +628,7 @@ h1{
         width: 2.969vw;
         border-radius: 0.781vw;
         transition: all 0.3;
-        background-image: url(../assest/images/btn_toTop.png);
+        background-image: url(../assets/images/btn_toTop.png);
         @media(max-width:1199px){
             width: 35px;
             height: 35px;
@@ -636,7 +636,7 @@ h1{
             border-radius: 5px;
         }
         &:hover{
-            background-image: url(../assest/images/btn_toTop_hover.png);
+            background-image: url(../assets/images/btn_toTop_hover.png);
         }
         &.active{
             border:0.052vw solid #000;
@@ -651,7 +651,7 @@ h1{
     padding: 50px 0;
     @media(max-width:767px){
         height: 100% !important;
-        background-image: url(../assest/images/bg_main.jpg) !important;
+        background-image: url(../assets/images/bg_main.jpg) !important;
         padding: 50px 0;
         background-size: cover;
         background-position: center center;
@@ -663,7 +663,7 @@ h1{
         }
     }
     &_02{
-        background-image: url(../assest/images/section02_bg.jpg);
+        background-image: url(../assets/images/section02_bg.jpg);
         background-size: cover;
         background-position: center center;
         
@@ -746,7 +746,7 @@ h1{
         }
     }
     &_03{
-        background-image: url(../assest/images/section03_bg.jpg);
+        background-image: url(../assets/images/section03_bg.jpg);
         background-size: cover;
         background-position: center center;
         @media(max-width:1199px){
@@ -962,7 +962,7 @@ h1{
                     position: absolute;
                     bottom: 0;
                     left: 0;
-                    background-image: url(../assest/images/section04_bg_text.png);
+                    background-image: url(../assets/images/section04_bg_text.png);
                     background-position: left center;
                     background-size: 100%;
                     color: #fff;
@@ -1105,7 +1105,7 @@ h1{
         }
     }
     &_05{
-        background-image: url(../assest/images/section05_bg.jpg);
+        background-image: url(../assets/images/section05_bg.jpg);
         background-size: cover;
         background-position-x: left;
         background-position-y: bottom;
@@ -1132,7 +1132,7 @@ h1{
     }
 }
 .section_contact{
-    background-image: url(../assest/images/section01_bg.jpg);
+    background-image: url(../assets/images/section01_bg.jpg);
     background-size: cover;
     background-position: center center;
     @media(max-width:1199px){
@@ -1333,7 +1333,7 @@ h1{
             position: absolute;
             bottom: 0;
             left: 0;
-            background-image: url(../assest/images/section04_bg_text.png);
+            background-image: url(../assets/images/section04_bg_text.png);
             background-position: left center;
             background-size: 100%;
             color: #fff;
