--- a/scss/_full.scss
+++ b/scss/_full.scss
@@ -346,6 +346,7 @@ h1{
         right: 30px;
     }
     @media(max-width:480px){
+        width: 25px;
         right: 15px;
     }
 }
@@ -489,6 +490,9 @@ h1{
         right: 40px !important;
         top: 60px;
     }
+    @media(max-width:767px){
+        display: none !important;
+    }
     ul{
         li{
             width: auto;
@@ -542,7 +546,7 @@ h1{
         width: 2.865vw;
         cursor: pointer;
         display: block;
-        background-size: contain;
+        background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
         background-color: #e4c16b;
@@ -1135,6 +1139,9 @@ h1{
     background-image: url(../assets/images/section01_bg.jpg);
     background-size: cover;
     background-position: center center;
+
+    
+
     @media(max-width:1199px){
         background-position-x: 20%;
     }
@@ -1145,6 +1152,11 @@ h1{
         margin-right: 6.510vw;
         margin-left: auto;
         text-align: center;
+
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
         @media(max-width:1199px){
             max-width: 40%;
             margin-top: 4vh;
@@ -1154,6 +1166,8 @@ h1{
             margin-top: 0;
             margin-left: auto;
             margin-right: auto;
+            position: static;
+            transform: none;
         }
     }
     
@@ -1317,30 +1331,69 @@ h1{
 }
 
 .modal{
-    .modal-body{
-        max-height: 80vh;
-        overflow: hidden;
-        padding: 0;
-        position: relative;
-        img{
-            width: 100%;
+    &#Utilities{
+        .modal-body{
+            max-height: 80vh;
+            overflow: hidden;
+            padding: 0;
+            position: relative;
+            img{
+                width: 100%;
+            }
+            .name{
+                // padding: 20px 35px;
+                // font-size:35px;
+                padding: 1.042vw 1.823vw;
+                font-size:1.823vw;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                background-image: url(../assets/images/section04_bg_text.png);
+                background-position: left center;
+                background-size: 100%;
+                color: #fff;
+                font-style: italic;
+                font-family: $fontLight;
+                margin-bottom: 0;
+                
+            }
         }
-        .name{
-            // padding: 20px 35px;
-            // font-size:35px;
-            padding: 1.042vw 1.823vw;
-            font-size:1.823vw;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            background-image: url(../assets/images/section04_bg_text.png);
-            background-position: left center;
-            background-size: 100%;
+    }
+    &#Thanks{
+        .modal-dialog{
+            max-width: 28vw;
+            @media(max-width: 1199px){
+                max-width: 500px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            @media(max-width: 767px){
+                max-width: 85%;
+                
+            }
+        }
+        .modal-content{
+            background: transparent;
+            border: none;
+        }
+        .modal-body{
+            min-height: 13vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.8vw;
+            background-image: linear-gradient(to left, #051d42, #072249, #082750, #0a2d57, #0b325e);
             color: #fff;
-            font-style: italic;
-            font-family: $fontLight;
-            margin-bottom: 0;
-            
+            border-radius: 1.5vw;
+            @media(max-width: 1199px){
+                min-height: 225px;
+                font-size: 25px;
+                border-radius: 25px;
+            }
+            @media(max-width: 767px){
+                min-height: 145px;
+                font-size: 20px;
+            }
         }
     }
     .close{
