--- a/scss/_full.scss
+++ b/scss/_full.scss
@@ -1359,17 +1359,16 @@ h1{
             }
         }
     }
-    &#Thanks{
+    &.modal-message{
         .modal-dialog{
-            max-width: 28vw;
+            max-width: 40vw;
             @media(max-width: 1199px){
-                max-width: 500px;
+                max-width: 620px;
                 margin-left: auto;
                 margin-right: auto;
             }
             @media(max-width: 767px){
-                max-width: 85%;
-                
+                max-width: 90%;
             }
         }
         .modal-content{
@@ -1377,11 +1376,12 @@ h1{
             border: none;
         }
         .modal-body{
+            padding: 2.5vw;
             min-height: 13vw;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.8vw;
+            font-size: 1.5vw;
             background-image: linear-gradient(to left, #051d42, #072249, #082750, #0a2d57, #0b325e);
             color: #fff;
             border-radius: 1.5vw;
@@ -1389,10 +1389,15 @@ h1{
                 min-height: 225px;
                 font-size: 25px;
                 border-radius: 25px;
+                padding: 30px;
             }
             @media(max-width: 767px){
                 min-height: 145px;
                 font-size: 20px;
+                padding: 20px;
+            }
+            @media(max-width:480px){
+                font-size: 18px;
             }
         }
     }
