--- a/css/main.css
+++ b/css/main.css
@@ -615,8 +615,18 @@ h1 {
     .section_02 .content {
       margin-right: 6.510vw;
       max-width: 42.188vw;
-      margin-top: 25vh;
-      margin-left: auto; }
+      margin-left: auto;
+      height: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
       @media (max-width: 1199px) {
         .section_02 .content {
           margin-right: 80px;
@@ -1142,38 +1152,36 @@ h1 {
       .section_contact .submit, .section_01 .submit, .section_06 .submit {
         margin-top: 20px; } }
   .section_contact .btn_submit, .section_01 .btn_submit, .section_06 .btn_submit {
-    font-size: 1.198vw;
-    width: 17.708vw;
-    height: 3.646vw;
-    border: 0.052vw solid #0a2e58;
-    -webkit-box-shadow: -0.313vw 0.365vw 0.365vw rgba(0, 0, 0, 0.52);
-    box-shadow: -0.313vw 0.365vw 0.365vw rgba(0, 0, 0, 0.52);
-    border-radius: 0.521vw;
+    width: 17.813vw;
+    height: 4.271vw;
+    border: none;
     color: #0a2e58;
     text-transform: uppercase;
     font-family: "SFUIText-Bold";
     text-align: center;
-    background-image: -webkit-gradient(linear, left bottom, left top, from(#f2d37c), color-stop(#e9c670), color-stop(#dfb964), color-stop(#d6ad59), to(#cca04e));
-    background-image: -webkit-linear-gradient(bottom, #f2d37c, #e9c670, #dfb964, #d6ad59, #cca04e);
-    background-image: -o-linear-gradient(bottom, #f2d37c, #e9c670, #dfb964, #d6ad59, #cca04e);
-    background-image: linear-gradient(to top, #f2d37c, #e9c670, #dfb964, #d6ad59, #cca04e); }
+    font-size: 0;
+    background-size: cover;
+    background-color: transparent;
+    background-image: url("../assets/images/btn_register_form.png"); }
+    .section_contact .btn_submit:hover, .section_01 .btn_submit:hover, .section_06 .btn_submit:hover {
+      background-image: url("../assets/images/btn_register_form_hover.png"); }
     @media (max-width: 1199px) {
       .section_contact .btn_submit, .section_01 .btn_submit, .section_06 .btn_submit {
-        font-size: 15px;
-        width: 200px;
-        height: 45px;
-        border: 1px solid #0a2e58;
-        -webkit-box-shadow: -6px 7px 7px rgba(0, 0, 0, 0.52);
-        box-shadow: -6px 7px 7px rgba(0, 0, 0, 0.52);
-        border-radius: 5px; } }
+        width: 270px;
+        height: 64px; } }
+    @media (max-width: 480px) {
+      .section_contact .btn_submit, .section_01 .btn_submit, .section_06 .btn_submit {
+        width: 235px;
+        height: 55px; } }
     .section_contact .btn_submit:disabled, .section_01 .btn_submit:disabled, .section_06 .btn_submit:disabled {
-      background-image: none;
-      background-color: #b5bbc1; }
+      cursor: not-allowed; }
 
 .image_mb {
   border: 5px solid #fff;
   margin-left: 10px;
   margin-right: 10px; }
+  .image_mb img {
+    width: 100%; }
   @media (min-width: 768px) {
     .image_mb {
       display: none; } }
