--- a/scss/_full.scss
+++ b/scss/_full.scss
@@ -658,7 +658,7 @@ h1{
     &_01{
         @extend .section_contact;
         @media (max-width:767px){
-           padding-top: 100px;
+           padding-top: 100px !important;
         }
     }
     &_02{
@@ -930,7 +930,7 @@ h1{
                         width: 100% !important;
                         margin: 0 !important;
                     }
-                    figure{
+                    .figure{
                         position: relative;
                         cursor: pointer;
                         @media(max-width:525px){
@@ -1148,18 +1148,73 @@ h1{
     }
     &_06{
         @extend .section_contact;
+        @media (max-width:767px){
+            padding: 50px 0 !important;
+            .image_mb{
+                margin-bottom: 20px;
+            }
+        }
     }
 }
 .section_contact{
-    background-image: url(../assets/images/section01_bg.jpg);
-    background-size: cover;
-    background-position: center center;
-
-    
-
-    @media(max-width:1199px){
-        background-position-x: 20%;
+    padding: 0;
+    .slider_bg{
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        position: absolute;
+        @media(max-width:767px){
+            display: none;
+        }
     }
+    .slider{
+        width: 100%;
+        opacity: 0;
+        transition: all 1.2s;
+        height: 100%;
+        z-index: 1;
+        position: absolute;
+        background-size: cover;
+        background-position: center center;
+        @media(max-width:1199px){
+            &_01{
+                background-position-x: 20%;
+            }
+            &_02{
+                background-position-x: 100%;
+            }
+        }
+        
+        &.show{
+           z-index: 2;
+           opacity: 1;
+        }
+    }
+    .slider_image_mb{
+        position: relative;
+    }
+    .image_dumm{
+        position: relative;
+    }
+    .slider_mb{
+        background-size: cover;
+        background-position: center center;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: all 1.2s;
+        &.image_mb_02{
+            background-position-y: top;
+        }
+        &.show{
+            z-index: 2;
+            opacity: 1;
+        }
+    }
+
     .content{
         // max-width: 540px;
         // margin-right: 125px;
@@ -1167,7 +1222,7 @@ h1{
         margin-right: 6.510vw;
         margin-left: auto;
         text-align: center;
-
+        z-index: 2;
         position: absolute;
         right: 0;
         top: 50%;
@@ -1526,3 +1581,24 @@ h1{
         cursor: not-allowed;
     }
 }
+
+
+.fancybox-container {
+    .fancybox-slide--image {
+        overflow: hidden;
+        padding: 80px 0;
+        .fancybox-content{
+            max-width: 71.771vw;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%) !important;
+        } 
+    }
+    .fancybox-is-open {
+        background: #092b55;
+    }
+    .fancybox-bg{
+        
+        opacity: 0.4;
+    }
+}   
