--- a/scss/_full.scss
+++ b/scss/_full.scss
@@ -935,6 +935,7 @@ h1{
                         cursor: pointer;
                         @media(max-width:525px){
                             margin: 5px 0;
+                            width: 100%;
                         }
                         img{
                             width: 100%;
@@ -1158,6 +1159,38 @@ h1{
 }
 .section_contact{
     padding: 0;
+
+    .slick-slider .slick-track, .slick-slider .slick-list{
+        height: 100%;
+    }
+    .slick-arrow{
+        position: absolute;
+        z-index: 1;
+        max-width: 2.865vw;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        padding: 10px;
+        @media(max-width:1199px){
+            max-width: 40px;
+        }
+        @media(max-width:767px){
+            max-width: 30px;
+            background: rgba(255, 255, 255, 0.39);
+            padding: 8px;
+        }
+    }
+    .slick-prev{
+        left: 2.083vw;
+        transform: translateY(-50%) rotate(-180deg);
+    }
+    .slick-next{
+        right: 2.083vw;
+    }
+    // .slick-disabled{
+    //     opacity: 0;
+    // }
+
     .slider_bg{
         width: 100%;
         height: 100%;
@@ -1169,11 +1202,11 @@ h1{
     }
     .slider{
         width: 100%;
-        opacity: 0;
+        // opacity: 0;
         transition: all 1.2s;
         height: 100%;
         z-index: 1;
-        position: absolute;
+        // position: absolute;
         background-size: cover;
         background-position: center center;
         @media(max-width:1199px){
