--- a/css/main.css
+++ b/css/main.css
@@ -686,6 +686,92 @@ h1 {
             width: 15px;
             height: 15px;
             top: 5px; } }
+  .section_02_video {
+    padding: 0; }
+    @media (max-width: 767px) {
+      .section_02_video {
+        height: 500px !important; } }
+    .section_02_video .marks {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      z-index: 2; }
+    .section_02_video .slick-dots {
+      z-index: 3;
+      position: absolute;
+      bottom: 3vw;
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
+      .section_02_video .slick-dots button {
+        background-color: transparent;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        width: 16px;
+        height: 16px;
+        font-size: 0;
+        margin: 0 5px;
+        position: relative; }
+        .section_02_video .slick-dots button::before {
+          position: absolute;
+          content: '';
+          width: 8px;
+          height: 8px;
+          border-radius: 50%;
+          left: 50%;
+          top: 50%;
+          -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
+      .section_02_video .slick-dots .slick-active button:before {
+        background-color: #fff; }
+    .section_02_video .content {
+      height: 100%; }
+    .section_02_video iframe {
+      display: block;
+      position: absolute;
+      z-index: 1;
+      top: 50%;
+      -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+      transform: translate(0, -50%);
+      left: 0;
+      width: 100%;
+      height: calc(100% + 200px); }
+    .section_02_video .slick-slider .slick-track, .section_02_video .slick-slider .slick-list {
+      height: 100%; }
+    .section_02_video .slick-arrow {
+      position: absolute;
+      z-index: 1;
+      max-width: 2.865vw;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      cursor: pointer;
+      padding: 10px; }
+      @media (max-width: 1199px) {
+        .section_02_video .slick-arrow {
+          max-width: 40px; } }
+      @media (max-width: 767px) {
+        .section_02_video .slick-arrow {
+          max-width: 30px;
+          background: rgba(255, 255, 255, 0.39);
+          padding: 8px; } }
+    .section_02_video .slick-prev {
+      left: 2.083vw;
+      -webkit-transform: translateY(-50%) rotate(-180deg);
+      -ms-transform: translateY(-50%) rotate(-180deg);
+      transform: translateY(-50%) rotate(-180deg); }
+    .section_02_video .slick-next {
+      right: 2.083vw; }
   .section_03 {
     background-image: url(../assets/images/section03_bg.jpg);
     background-size: cover;
