--- a/scss/_full.scss
+++ b/scss/_full.scss
@@ -754,9 +754,9 @@ h1{
     }
     &_02_video{
         padding: 0;
-        @media(max-width:767px){
-            height: 500px !important;
-        }
+        // @media(max-width:767px){
+        //     height: 500px !important;
+        // }
         .marks{
             position: absolute;
             height: 100%;
@@ -803,16 +803,16 @@ h1{
         }
         iframe {
             display: block;
-            position: absolute;
+            // position: absolute;
             z-index: 1;
-            top: 50%;
-            transform: translate(0, -50%);
+            // top: 50%;
+            // transform: translate(0, -50%);
             left: 0;
             width: 100%;
             height: calc(100% + 200px);
         }
         .slick-slider .slick-track, .slick-slider .slick-list{
-            height: 100%;
+            height: 100% !important;
         }
         .slick-arrow{
             position: absolute;
@@ -832,11 +832,11 @@ h1{
             }
         }
         .slick-prev{
-            left: 2.083vw;
+            left: 6.083vw;
             transform: translateY(-50%) rotate(-180deg);
         }
         .slick-next{
-            right: 2.083vw;
+            right: 6.083vw;
         }
     }
     &_03{
@@ -1723,3 +1723,34 @@ h1{
         opacity: 0.4;
     }
 }   
+
+  
+.videoSlider {
+    height: 100%;
+    @media(max-width: 767px){
+        height: auto;
+    }
+    .item{
+        position: relative;
+        @media(max-width: 767px){
+            height: 300px;
+        }
+    }
+    .yt-player{
+        position: absolute;
+        top: 0;
+        z-index: 0;
+        @media(max-width: 767px){
+            height: 300px;
+        }
+    }
+    .mark{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        background: transparent;
+    }
+}
